--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": true,
   "devDependencies": {
+    "daisyui": "^5.0.43",
     "esbuild": "^0.25.4"
   },
   "scripts": {
